--- a/styles/recetas.css
+++ b/styles/recetas.css
@@ -301,7 +301,7 @@ nav ul li a:active{
   text-transform: uppercase;
   background-color: black;
   opacity: 0.9;
-  margin: 0 30% 5% 30%;
+  margin: 0 auto 5% auto;
 }
 
 .card-link:hover{
