--- a/styles/sobre-nosotros.css
+++ b/styles/sobre-nosotros.css
@@ -252,6 +252,7 @@ nav ul li a:active{
   background-position: center;
   background-repeat: no-repeat;
 }
+
 .about-us-photo  {
   animation: about-us-photo-back  1s ease-in-out 0s 1;
 }
@@ -271,7 +272,7 @@ nav ul li a:active{
   color: white;
 }
 
-.about-us-description, .form-fields, .photo-form {
+.form-fields, .photo-form {
   min-width: 50vw;
 }
 
@@ -306,8 +307,13 @@ nav ul li a:active{
 }
 
 .about-us-description img {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-us-description img {
   width: 71%;
-  margin-top: 2%;
+  margin: 2% auto 0 auto;
   padding-top: 4%;
   animation: about-us-description-anim  1s ease-in-out 0s 1;
   filter: invert(100%);
@@ -342,8 +348,9 @@ nav ul li a:active{
 }
 
 .container-people > div{
-  min-height:365px;
-  text-align: center;  
+  text-align: center; 
+  display: flex;
+  flex-direction: column; 
 }
 
 .container-people img{
@@ -359,12 +366,14 @@ nav ul li a:active{
 }
 
 .container-people > div > div{
-  background-color: #161616;  padding-top: 3%;
-  display:none;
-  position:absolute;
-  top:0;
+  background-color: #161616;
+  padding-top: 3%;
+  display: none;
+  position: absolute;
+  top: 0;
   border-radius: 4px;
-  color:white;
+  color: #fff; 
+  opacity:0.9;  
 }
 
 .container-people > div:hover > div{
@@ -486,6 +495,14 @@ textarea {
   }
 }
 
+@media (min-width: 992px){
+
+  .container-people {
+   min-height:50vh;
+  }
+
+}
+
 @media (min-width: 780px){
   .photo-form:hover > div {
     background-color: rgba(0,0,0,0.85);
@@ -520,12 +537,6 @@ textarea {
       stroke-dashoffset:0;
       opacity:0.9;
     }
-  }
-}
-
-@media (max-width: 1050px) and (min-width: 68px){
-  .about-us-description{
-    padding-bottom: 4%;
   }
 }
 
@@ -581,12 +592,7 @@ textarea {
 
   .container-people{
     padding-top: 2%;
-    margin-bottom: 0;
     grid-column-gap: 3%;
-  }
- 
-  .container-people > div{
-    min-height: 390px;
   }
 
   .container-people > div:nth-child(1),
@@ -626,23 +632,19 @@ textarea {
 
   .container-people{
     grid-template-columns: 1fr;
-    margin-top: 6%;
-    padding-top: 0;
+    padding-top: 3%;
+    margin-bottom: 1%;
   }
 
   .container-people img {
-    height:70%;
-    width:100%;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
   }
 
   .container-people > div,
   .container-people > div:nth-child(1),
    .container-people > div:nth-child(3) {
-    margin-bottom:2.5%;
+    margin-bottom:5%;
   } 
   
   .container-people > div:hover {
@@ -710,7 +712,6 @@ textarea {
 /* footer */
 footer{
   background: rgb(25,25,25);
-  min-height: 66px;
   width: 100vw;
 }
 
