--- a/styles/recetas-detalle.css
+++ b/styles/recetas-detalle.css
@@ -390,7 +390,7 @@ nav ul li a:active{
 }
 
 .recomendations-object > div {
-  width: 22vw;
+  width: 100%;
   background-color: rgba(25,25,25,0.2);
   display: flex;
   justify-content: center;
@@ -400,11 +400,7 @@ nav ul li a:active{
 
 .recomendations-object > div a{
   width: 100%; 
-  border:0;
   padding: 5%;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  margin-bottom:0;
 }
 
 .recomendations-object:first-child > div a{
@@ -424,20 +420,17 @@ nav ul li a:active{
 
 .card-link{
   color: white;
-  border-radius: 4px;
   font-size: 15px;
-  padding: 9px 20px;
-  border: 1px solid white;
   text-transform: uppercase;
   background-color: black;
   opacity: 0.9;
-  margin-bottom: 9%;
+  border-bottom-left-radius:  4px;
+  border-bottom-right-radius:  4px;  
 }
 
 .card-link:hover{
-  background-color: rgba(160,160,160,0.3);
+  background-color: #1c1c1c;
   opacity: 1;
-  border: 0;
 }
 
 .card-link:active{
@@ -566,6 +559,7 @@ nav ul li a:active{
   .recomendations-object > div,
   .recomendations-object > img {
     width: 40vw;
+    display:flex;
   }
 }
 
